# flask-chat

./: .gitgnore  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  boot.sh  config.py  data-dev.sqlite  data-dev.sqlite-journal  data.sqlite  docker-compose.yml  env  flask_chat.py  flask_demo.py  flaskenv  hello.py  pyproject.toml  requirements.txt  setup.cfg
app/: __init__.py  email.py  fake.py  models.py
app/api/: __init__.py  authentication.py  comments.py  posts.py  users.py
app/auth/: forms.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/templates/: 403.html  404.html  500.html  _posts.html  base.html  edit_post.html  edit_profile.html  followers.html  index.html  moderate.html  post.html  user.html
app/templates/auth/: change_email.html  (+5 more)
migrations/versions/: 190163627111_account_confirmation.py  198b0eebcf9_caching_of_avatar_hashes.py  1b966e7f4b9e_post_model.py  2003c324a433_user_profile_page.py  2356a38169ea_followers.py  288cd3dc5a8_rich_text_posts.py  347978c486b3_add_follow_association_table_and_helper_.py  38c4e85512a9_initial_migration.py  456a945560f6_login_support.py  51f5ccfba190_comments.py  56ed7d33de8d_user_roles.py  6889b93062eb_.py  7c54cdd47c48_avatar_caching.py  9167a1ea8242_add_comments_on_posts.py  c8934c2da7f4_users_table.py  d66f086b258_user_information.py  fb4b3feee411_add_blog_post_forms.py
requirements/: common.txt  dev.txt  docker.txt  heroku.txt
templates/: 404.html  500.html  base.html  index.html
tests/: test_api.py  test_client.py  test_selenium.py  test_user_model.py
(+7 files in other folders)
