[tool.black]
line-length = 119
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 119

[tool.poetry]
name = "flask_chat"
version = "0.1.0"
description = "A social blogging application demonstrating Flask functionality"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask-Bootstrap = "3.3.7.1"
Werkzeug = "2.0.2"
itsdangerous = "2.0.1"
alembic = "1.7.5"
bleach = "4.1.0"
blinker = "1.4"
click = "8.0.3"
dominate = "2.6.0"
email-validator = "1.1.3"
Flask = "2.0.2"
Flask-HTTPAuth = "4.5.0"
Flask-Login = "0.5.0"
Flask-Mail = "0.9.1"
Flask-Migrate = "3.1.0"
Flask-Moment = "1.0.2"
Flask-PageDown = "0.4.0"
Flask-SQLAlchemy = "2.5.1"
Flask-WTF = "1.0.0"
html5lib = "1.1"
Jinja2 = "3.0.3"
Mako = "1.1.6"
Markdown = "3.3.6"
MarkupSafe = "2.0.1"
python-dateutil = "2.8.2"
python-editor = "1.0.4"
six = "1.16.0"
SQLAlchemy = "1.4.31"
visitor = "0.1.3"
webencodings = "0.5.1"
WTForms = "3.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
